--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -106,12 +106,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for row in rows[1:]:  # Skip the header row\n",
+    "for row in rows[1:]:,
     "    columns = row.find_all('td')\n",
     "    rank.append(columns[0].text.strip())\n",
     "    title.append(columns[1].text.strip())\n",
     "    \n",
-    "    # Extract the year and ensure it has four digits\n",
     "    year_text = columns[3].text.strip()\n",
     "    year_parts = year_text.split()\n",
     "    for part in year_parts:\n",
@@ -119,10 +118,10 @@
     "            year.append(part)\n",
     "            break\n",
     "    else:\n",
-    "        year.append('N/A')  # Handle cases where the year is not found\n",
+    "        year.append('N/A') ",
     "        \n",
     "    gross_text = columns[2].text.strip().replace(',', '').replace('$', '')\n",
-    "    lifetime_gross.append(gross_text)  # Removed symbols"
+    "    lifetime_gross.append(gross_text) "
    ]
   },
   {
