--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the url and send an HTTP GET request to the URL"
+    "Define the url and send an HTTP GET request to the URL."
    ]
   },
   {
